Progress check fix product list mobile layout problem.

--- a/app/components/ProductGrid/styles/MediumGrid.scss
+++ b/app/components/ProductGrid/styles/MediumGrid.scss
@@ -100,5 +100,5 @@
 
 .medium-grid-image {
 	aspect-ratio: 1/1;
-	width: 100%;
+	width: 600px;
 }
